Truncated text fixes (#388)
* Fix ordering of fields in stories

* Fix ordering of fields in UI TruncatedText

* Simplify text examples

* Use more self-documenting example css styles

* Remove huge font size

* Never use maxDisplayWidth as maxTooltipWidth

* Provide explicit argType definitions for all relevant fields

* Prefer explicit args in stories to implicit default args

* Align default story args with default component args

* Refine comments

* chore: delete unused class declaration in global.css

* Update packages/namekit-react/src/components/TruncatedText.tsx

---------

--- a/apps/storybook.namekit.io/global.css
+++ b/apps/storybook.namekit.io/global.css
@@ -3,10 +3,6 @@
   background: white;
 }
 
-.huge-font-size {
-  font-size: 80px;
-}
-
 .colorful-text {
   font-weight: 700;
   text-decoration: underline;
